fabric/testdata/out/ing_spp-product-identity-get-api-identities-hierarchies-rl-all.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/backend-weights":"{\"spp-product-identity-master-572\":0.0,\"spp-product-identity-master-573\":100.0}","zalando.org/skipper-filter":"inlineContentIfStatus(429,
      \"{\\\"title\\\": \\\"Rate limit exceeded\\\", \\\"detail\\\": \\\"See the retry-after
      header for how many seconds to wait before retrying.\\\", \\\"status\\\": 429}\",
      \"application/problem+json\") -\u003e oauthTokeninfoAnyKV(\"realm\", \"/services\",
      \"realm\", \"/employees\") -\u003e unverifiedAuditLog(\"sub\") -\u003e oauthTokeninfoAllScope(\"uid\",
      \"spp-product-identity.identities.read\") -\u003e clusterClientRatelimit(\"spp-product-identity_api-identities-hierarchies_GET\",
      300, \"1m\", \"Authorization\") -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\",
      \"uid\", \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(3) \u0026\u0026
      Path(\"/api/identities-hierarchies\") \u0026\u0026 Method(\"GET\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"dd881b95-f979-11e8-968d-026f86c7c91a","deployment-id":"d-axm9b9h4emne2icuau68ss53s","pipeline-id":"l-gqkrnfckkaunnp4hd1ria2jz5"},"name":"spp-product-identity-get-api-identities-hierarchies-rl-all","namespace":"default"},"spec":{"rules":[{"host":"spp-product-identity.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-identity-master-572","servicePort":8080},"pathType":"Implement [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/backend-weights: '{"spp-product-identity-master-572":0.0,"spp-product-identity-master-573":100.0}'
    zalando.org/skipper-filter: 'inlineContentIfStatus(429, "{\"title\": \"Rate limit
      exceeded\", \"detail\": \"See the retry-after header for how many seconds to
      wait before retrying.\", \"status\": 429}", "application/problem+json") -> oauthTokeninfoAnyKV("realm",
      "/services", "realm", "/employees") -> unverifiedAuditLog("sub") -> oauthTokeninfoAllScope("uid",
      "spp-product-identity.identities.read") -> clusterClientRatelimit("spp-product-identity_api-identities-hierarchies_GET",
      300, "1m", "Authorization") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")'
    zalando.org/skipper-predicate: Weight(3) && Path("/api/identities-hierarchies")
      && Method("GET") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2020-09-04T09:40:08Z"
  generation: 149
  labels:
    controller-uid: dd881b95-f979-11e8-968d-026f86c7c91a
    deployment-id: d-axm9b9h4emne2icuau68ss53s
    pipeline-id: l-gqkrnfckkaunnp4hd1ria2jz5
  name: spp-product-identity-get-api-identities-hierarchies-rl-all
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-identity
    uid: dd881b95-f979-11e8-968d-026f86c7c91a
  resourceVersion: "1383881154"
  uid: 9203904f-db6f-49d1-b3de-c4278ffb98fd
spec:
  rules:
  - host: spp-product-identity.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-master-572
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-product-identity-master-573
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: spp-product-identity-api.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-master-572
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-product-identity-master-573
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: spp-identity-data-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-product-identity-master-572
            port:
              number: 8080
        pathType: ImplementationSpecific
      - backend:
          service:
            name: spp-product-identity-master-573
            port:
              number: 8080
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
